--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+    /***************** GENERAL AND UTILITY ***************/
 *{
     margin: 0;
     padding: 0;
@@ -8,3 +9,28 @@
 body{
     background-color: aquamarine;
 }
+
+.B{background-color: black;}
+
+.flex{display: flex;}
+.JCFlexEnd{justify-content: flex-end;}
+.alignFE{align-items: flex-end;}
+
+.marR{margin-right: 1em;}
+
+/**************** HEADER **************/
+.bandH{
+    width: 100%;
+    height: 70px;
+}
+
+.headContainer{background-color: grey;
+    padding: 0.5em;
+    border-radius: 10px;
+    margin-bottom: 0.5em;
+}
+
+/**************** MAIN *************/
+
+
+/*************** FOOTER ***************/
