--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@ body{
     background-color: aquamarine;
 }
 
+img{
+    width: 100%;
+    height: 100%;
+}
 .B{background-color: black;}
 .G{background-color: grey;}
 
@@ -55,6 +59,13 @@ body{
     height: calc(100%/5 - 10px);
 }
 
+.pAbsUser{
+    color: white;
+    background-color: rgb(38, 38, 38, 0.5);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 /*************** FOOTER ***************/
 .bandF{height: 80px;
     width: 100%;
